revert the CI push strategy

--- a/.github/workflows/layer_cache.yaml
+++ b/.github/workflows/layer_cache.yaml
@@ -1,12 +1,12 @@
 name: Run static code analysis and unit test for cache module
 
-#on:
-#  push:
-#    paths:
-#      - layers/cache/**
-
 on:
-  push
+  push:
+    paths:
+      - layers/cache/**
+
+#on:
+#  push
 
 permissions:
   checks: write
