--- a/layers/firebase/pubspec.yaml
+++ b/layers/firebase/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
     path: ../dependency_injector
 
 dev_dependencies:
-  lints: ^3.0.0
-  test: ^1.24.3
-  mocktail: ^1.0.2
   build_runner: ^2.4.6
+  flutter_test:
+    sdk: flutter
+  lints: ^3.0.0
+  mocktail: ^1.0.2
