fix analyser error

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,7 +2,7 @@ include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
-    - avoid_renaming_method_parameters
+    - avoid_renaming_method_parameters: false
 
 analyzer:
   exclude:
