--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,6 +7,8 @@ linter:
 analyzer:
   exclude:
     - bricks/**
+    - lib/flavors/johto/firebase_options_johto.dart
+    - lib/flavors/kanto/firebase_options_kanto.dart
   language:
     strict-casts: true
     strict-raw-types: true
