--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  collection: any
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.3.8
 
