fixes firebase remote config based on build env

--- a/layers/feature_flag/pubspec.yaml
+++ b/layers/feature_flag/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
 
   cache:
     path: ../cache
+  core:
+    path: ../core
   dependency_injector:
     path: ../dependency_injector
   firebase:
