--- a/layers/firebase/pubspec.yaml
+++ b/layers/firebase/pubspec.yaml
@@ -12,13 +12,17 @@ dependencies:
   firebase_analytics: ^10.7.4
   firebase_core: ^2.24.2
   firebase_crashlytics: ^3.4.8
+  cloud_firestore: ^4.13.6
   firebase_remote_config: ^4.3.8
 
   dependency_injector:
     path: ../dependency_injector
+  log_reporter:
+    path: ../log_reporter
 
 dev_dependencies:
   build_runner: ^2.4.6
+  fake_cloud_firestore: ^2.4.4
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.2
