--- a/.github/workflows/layer_remote.yaml
+++ b/.github/workflows/layer_remote.yaml
@@ -12,7 +12,7 @@ permissions:
   checks: write
 
 jobs:
-  layer_error_reporter:
+  layer_remote:
     uses: ./.github/workflows/_analyze_and_test_flutter_module.yaml
     with:
       module_path: './layers/remote'
