--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.3.8
 
+  app_config:
+    path: layers/app_config
   cache:
     path: layers/cache
   core:
