--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   collection: any
   cupertino_icons: ^1.0.6
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
   flutter_native_splash: ^2.3.8
 
   app_config:
@@ -40,21 +42,20 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  bloc_test: ^9.1.5
   build_runner: ^2.4.7
   flutter_lints: ^3.0.1
   flutter_launcher_icons: ^0.13.1
   hive_generator: ^2.0.1
-  melos: ^3.4.0
+  melos: ^4.0.0
+  test: ^1.24.9
 
 flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
