--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   hive_generator: ^2.0.1
   melos: ^4.0.0
+  mocktail: ^1.0.2
   test: ^1.24.9
 
 flutter:
