fixes formatting error

--- a/.github/workflows/_analyze_and_test_app.yaml
+++ b/.github/workflows/_analyze_and_test_app.yaml
@@ -33,7 +33,7 @@ jobs:
         run: flutter pub get
 
       - name: Format the Dart code
-        run: dart format . --set-exit-if-changed
+        run: dart format . --set-exit-if-changed lib test
 
       - name: Setup Melos
         run: |
