--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,9 +24,15 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace "com.mayandro.dexquiz"
-    compileSdkVersion 33
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -69,18 +75,18 @@ android {
 
     signingConfigs {
         kanto {
-            storeFile file(".signing/kanto.jks")
-            keyAlias System.getenv("SIGNING_KEY_ALIAS")
-            keyPassword System.getenv("SIGNING_KEY_PASSWORD")
-            storePassword System.getenv("SIGNING_STORE_PASSWORD")
+            storeFile keystoreProperties['storeFileKanto'] ? file(keystoreProperties['storeFileKanto']) : null
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storePassword keystoreProperties['storePassword']
 
             v2SigningEnabled true
         }
         johto {
-            storeFile file(".signing/johto.jks")
-            keyAlias System.getenv("SIGNING_KEY_ALIAS")
-            keyPassword System.getenv("SIGNING_KEY_PASSWORD")
-            storePassword System.getenv("SIGNING_STORE_PASSWORD")
+            storeFile keystoreProperties['storeFileJohto'] ? file(keystoreProperties['storeFileJohto']) : null
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storePassword keystoreProperties['storePassword']
 
             v2SigningEnabled true
         }
@@ -104,4 +110,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.google.android.material:material:1.11.0'
+}
