--- a/.github/workflows/_build_android.yaml
+++ b/.github/workflows/_build_android.yaml
@@ -33,9 +33,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Java environment
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: ${{env.JAVA_VERSION}}
+          cache: 'gradle'
 
       - name: Setup the flutter environment
         uses: subosito/flutter-action@v2
@@ -44,6 +46,20 @@ jobs:
           cache: true
           cache-key: flutter
           cache-path: ${{ runner.tool_cache }}/flutter
+
+      - name: Download Android keystore
+        id: android_keystore
+        uses: timheuer/base64-to-file@v1.0.3
+        with:
+          fileName: ${{ inputs.flavor }}.jks
+          encodedString: ${{ secrets.SIGNING_KEYSTORE }}
+
+      - name: Create key.properties
+        run: |
+          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
+          echo "storePassword=${{ secrets.SIGNING_KEY_PASSWORD }}" >> android/key.properties
+          echo "keyPassword=${{ secrets.SIGNING_KEY_PASSWORD }}" >> android/key.properties
+          echo "keyAlias=${{ secrets.SIGNING_KEY_ALIAS }}" >> android/key.properties
 
       - name: Setup Melos
         run: |
