--- a/.github/workflows/_build_android.yaml
+++ b/.github/workflows/_build_android.yaml
@@ -23,6 +23,7 @@ env:
   DART_SDK_VERSION: 3.2.3
   FLUTTER_VERSION: "3.16.3"
   JAVA_VERSION: "12.x"
+  PROPERTIES_PATH: "./android/key.properties"
 
 jobs:
   create_release_artifact:
@@ -47,19 +48,14 @@ jobs:
           cache-key: flutter
           cache-path: ${{ runner.tool_cache }}/flutter
 
-      - name: Download Android keystore
-        id: android_keystore
-        uses: timheuer/base64-to-file@v1.0.3
-        with:
-          fileName: ${{ inputs.flavor }}.jks
-          encodedString: ${{ secrets.SIGNING_KEYSTORE }}
-
-      - name: Create key.properties
+      - name: Create the key.properties
         run: |
-          echo "{{ inputs.flavor }}StoreFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
-          echo "storePassword=${{ secrets.SIGNING_KEY_PASSWORD }}" >> android/key.properties
-          echo "keyPassword=${{ secrets.SIGNING_KEY_PASSWORD }}" >> android/key.properties
-          echo "keyAlias=${{ secrets.SIGNING_KEY_ALIAS }}" >> android/key.properties
+          echo keyPassword=\${{ secrets.SIGNING_KEY_PASSWORD }} > ${{env.PROPERTIES_PATH}}
+          echo storePassword=\${{ secrets.SIGNING_STORE_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
+          echo keyAlias=\${{ secrets.SIGNING_KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}
+
+      - name: Decoding base64 key into a file
+        run: echo "${{ secrets.SIGNING_KEYSTORE }}" | base64 --decode > android/app/.signing/{{ inputs.flavor }}.jks
 
       - name: Setup Melos
         run: |
