--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -9,12 +9,12 @@ on:
       - staging
 
 jobs:
-  analyze_and_test:
-    uses: ./.github/workflows/_analyze_and_test_app.yaml
+#  analyze_and_test:
+#    uses: ./.github/workflows/_analyze_and_test_app.yaml
 
   build_android_kanto:
     uses: ./.github/workflows/_build_android.yaml
-    needs: analyze_and_test
+    #needs: analyze_and_test
     with:
       flavor: kanto
       target: lib/flavors/kanto/main_kanto.dart
