--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -9,8 +9,24 @@ on:
       - staging
 
 jobs:
+  analyze_and_test:
+    uses: ./.github/workflows/_analyze_and_test_app.yaml
+
+  build_android_kanto:
+    uses: ./.github/workflows/_build_android.yaml
+    needs: analyze_and_test
+    with:
+      flavor: kanto
+      target: lib/flavors/kanto/main_kanto.dart
+    secrets:
+      SIGNING_KEYSTORE: ${{ secrets.KANTO_KEYSTORE }}
+      SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
+      SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
+      SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
+
   build_android_johto:
     uses: ./.github/workflows/_build_android.yaml
+    needs: analyze_and_test
     with:
       flavor: johto
       target: lib/flavors/johto/main_johto.dart
