--- a/.github/workflows/release_review.yaml
+++ b/.github/workflows/release_review.yaml
@@ -1,25 +1,23 @@
-name: Test, build and upload artefacts on every push
+name: Build and upload release to firebase for review
 
 on:
   push:
-    branches:
-      - staging
-  pull_request:
-    branches:
-      - staging
+    tags:
+      - '*-review'
+
+concurrency:
+  # only one running workflow for a ref (branch, tag)
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  analyze_and_test:
-    uses: ./.github/workflows/_analyze_and_test_app.yaml
-
   build_android_kanto:
     uses: ./.github/workflows/_build_android.yaml
-    needs: analyze_and_test
     with:
       flavor: kanto
       target: lib/flavors/kanto/main_kanto.dart
-      upload_to_github: 'true'
-      upload_to_firebase: 'false'
+      upload_to_github: 'false'
+      upload_to_firebase: 'true'
     secrets:
       SIGNING_KEYSTORE: ${{ secrets.KANTO_KEYSTORE }}
       SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
@@ -30,12 +28,11 @@ jobs:
 
   build_android_johto:
     uses: ./.github/workflows/_build_android.yaml
-    needs: analyze_and_test
     with:
       flavor: johto
       target: lib/flavors/johto/main_johto.dart
-      upload_to_github: 'true'
-      upload_to_firebase: 'false'
+      upload_to_github: 'false'
+      upload_to_firebase: 'true'
     secrets:
       SIGNING_KEYSTORE: ${{ secrets.JOHTO_KEYSTORE }}
       SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
@@ -43,4 +40,3 @@ jobs:
       SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
       FIREBASE_APP_ID: ${{ secrets.JOHTO_ANDROID_FIREBASE_APP_ID }}
       FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-
