updates the firebase distribution cicd [skip-ci]

--- a/.github/workflows/layer_app_config.yaml
+++ b/.github/workflows/layer_app_config.yaml
@@ -2,6 +2,8 @@ name: Run static code analysis and unit test for app config module
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/app_config/**
 
