--- a/.github/workflows/layer_cache.yaml
+++ b/.github/workflows/layer_cache.yaml
@@ -2,6 +2,8 @@ name: Run static code analysis and unit test for cache module
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/cache/**
 
