--- a/.github/workflows/layer_firebase.yaml
+++ b/.github/workflows/layer_firebase.yaml
@@ -2,6 +2,8 @@ name: Run static code analysis and unit test for firebase module
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/firebase/**
 
