--- a/.github/workflows/layer_core.yaml
+++ b/.github/workflows/layer_core.yaml
@@ -2,6 +2,8 @@ name: Run static code analysis and unit test for core module
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/core/**
 
