--- a/.github/workflows/layer_design_system.yaml
+++ b/.github/workflows/layer_design_system.yaml
@@ -2,6 +2,8 @@ name: Run static code analysis and unit test for design system module
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/design_system/**
 
