--- a/.github/workflows/layer_error_reporter.yaml
+++ b/.github/workflows/layer_error_reporter.yaml
@@ -2,6 +2,8 @@ name: Run static code analysis and unit test for error reporter module
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/error_reporter/**
 
