--- a/.github/workflows/layer_log_reporter.yaml
+++ b/.github/workflows/layer_log_reporter.yaml
@@ -2,6 +2,8 @@ name: Run static code analysis and unit test for log reporter module
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/log_reporter/**
 
