--- a/.github/workflows/layer_remote.yaml
+++ b/.github/workflows/layer_remote.yaml
@@ -2,6 +2,8 @@ name: Run static code analysis and unit test for remote module
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/remote/**
 
