--- a/.github/workflows/layer_use_case.yaml
+++ b/.github/workflows/layer_use_case.yaml
@@ -2,6 +2,8 @@ name: Analyze and test use case layer module
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/use_case/**
 
