--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -18,6 +18,7 @@ jobs:
     with:
       flavor: kanto
       target: lib/flavors/kanto/main_kanto.dart
+      build_env: staging
       upload_to_github: 'true'
       upload_to_firebase: 'false'
     secrets:
