Feature: GitHub action app (#24)

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,7 @@ test-results.json
 
 # build_runner generated files
 **.g.dart
+
+# ignore signing keystore files
+/android/app/.signing
+/android/app/.firebase_distribution
