--- a/.github/workflows/layer_app_config.yaml
+++ b/.github/workflows/layer_app_config.yaml
@@ -1,5 +1,9 @@
 name: Run static code analysis and unit test for app config module
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches:
