--- a/.github/workflows/layer_error_reporter.yaml
+++ b/.github/workflows/layer_error_reporter.yaml
@@ -1,9 +1,11 @@
 name: Run static code analysis and unit test for error reporter module
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
-    branches:
-      - staging
     paths:
       - layers/error_reporter/**
 
