--- a/.github/workflows/layer_feature_flag.yaml
+++ b/.github/workflows/layer_feature_flag.yaml
@@ -1,5 +1,9 @@
 name: Run static code analysis and unit test for design system module
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches:
