--- a/.github/workflows/layer_firebase.yaml
+++ b/.github/workflows/layer_firebase.yaml
@@ -1,9 +1,11 @@
 name: Run static code analysis and unit test for firebase module
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
-    branches:
-      - staging
     paths:
       - layers/firebase/**
 
