--- a/.github/workflows/feature_settings.yaml
+++ b/.github/workflows/feature_settings.yaml
@@ -16,7 +16,7 @@ permissions:
   checks: write
 
 jobs:
-  layer_design_system:
+  feature_settings:
     uses: ./.github/workflows/_analyze_and_test_flutter_module.yaml
     with:
       module_path: './features/settings'
