test code coverage

--- a/.github/workflows/layer_app_config.yaml
+++ b/.github/workflows/layer_app_config.yaml
@@ -4,13 +4,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-on:
-  push:
-    paths:
-      - layers/app_config/**
 
-#on:
-#  push
+
+on:
+  push
 
 permissions:
   checks: write
