--- a/layers/app_config/pubspec.yaml
+++ b/layers/app_config/pubspec.yaml
@@ -11,7 +11,10 @@ dependencies:
     sdk: flutter
 
   equatable: ^2.0.5
+  in_app_review: ^2.0.8
   json_annotation: ^4.8.1
+  package_info_plus: ^5.0.1
+  url_launcher: ^6.2.4
 
   core:
     path: ../core
