--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ test-results.json
 # ignore signing keystore files
 /android/app/.signing
 /android/app/.firebase_distribution
+/android/app/.playstore
