--- a/.github/workflows/create_review_build.yaml
+++ b/.github/workflows/create_review_build.yaml
@@ -23,6 +23,7 @@ jobs:
       build_env: staging
       upload_to_github: 'false'
       upload_to_firebase: 'true'
+      upload_to_play_store: 'false'
     secrets:
       SIGNING_KEYSTORE: ${{ secrets.KANTO_KEYSTORE }}
       SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
@@ -30,6 +31,7 @@ jobs:
       SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
       FIREBASE_APP_ID: ${{ secrets.KANTO_ANDROID_FIREBASE_APP_ID }}
       CREDENTIAL_FILE_CONTENT: ${{ secrets.KANTO_CREDENTIAL_FILE_CONTENT }}
+      PLAYSTORE_SERVICE_ACCOUNT_JSON: ${{ secrets.KANTO_PLAYSTORE_SERVICE_ACCOUNT_JSON }}
 
   build_android_johto:
     uses: ./.github/workflows/_build_android.yaml
@@ -40,6 +42,7 @@ jobs:
       build_env: staging
       upload_to_github: 'false'
       upload_to_firebase: 'true'
+      upload_to_play_store: 'false'
     secrets:
       SIGNING_KEYSTORE: ${{ secrets.JOHTO_KEYSTORE }}
       SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
@@ -47,3 +50,4 @@ jobs:
       SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
       FIREBASE_APP_ID: ${{ secrets.JOHTO_ANDROID_FIREBASE_APP_ID }}
       CREDENTIAL_FILE_CONTENT: ${{ secrets.JOHTO_CREDENTIAL_FILE_CONTENT }}
+      PLAYSTORE_SERVICE_ACCOUNT_JSON: ${{ secrets.JOHTO_PLAYSTORE_SERVICE_ACCOUNT_JSON }}
