fixes the release candidate to prod build

--- a/.github/workflows/create_release_candidate.yaml
+++ b/.github/workflows/create_release_candidate.yaml
@@ -39,7 +39,7 @@ jobs:
     with:
       flavor: johto
       target: lib/flavors/johto/main_johto.dart
-      build_env: staging
+      build_env: prod
       upload_to_github: 'false'
       upload_to_firebase: 'true'
       upload_to_play_store: 'false'
