updates layer code generator login in pipeline

--- a/.github/workflows/layer_design_system.yaml
+++ b/.github/workflows/layer_design_system.yaml
@@ -21,4 +21,6 @@ jobs:
     with:
       module_path: './layers/design_system'
       should_run_golden_test: 'true'
+      has_build_runner: 'true'
+      have_dependent_build_runner: 'false'
 
