--- a/.github/workflows/feature_settings.yaml
+++ b/.github/workflows/feature_settings.yaml
@@ -21,4 +21,6 @@ jobs:
     with:
       module_path: './features/settings'
       should_run_golden_test: 'false'
+      has_build_runner: 'false'
+      have_dependent_build_runner: 'true'
 
