--- a/.github/workflows/layer_app_config.yaml
+++ b/.github/workflows/layer_app_config.yaml
@@ -21,4 +21,6 @@ jobs:
     with:
       module_path: './layers/app_config'
       should_run_golden_test: 'false'
+      has_build_runner: 'true'
+      have_dependent_build_runner: 'false'
 
