--- a/.github/workflows/layer_dependency_injector.yaml
+++ b/.github/workflows/layer_dependency_injector.yaml
@@ -20,4 +20,7 @@ jobs:
     uses: ./.github/workflows/_analyze_and_test_dart_module.yaml
     with:
       module_path: './layers/dependency_injector'
+      should_run_golden_test: 'false'
+      has_build_runner: 'false'
+      have_dependent_build_runner: 'false'
 
