--- a/.github/workflows/layer_remote.yaml
+++ b/.github/workflows/layer_remote.yaml
@@ -21,4 +21,6 @@ jobs:
     with:
       module_path: './layers/remote'
       should_run_golden_test: 'false'
+      has_build_runner: 'false'
+      have_dependent_build_runner: 'false'
 
