fixes dependency injection pipeline

--- a/.github/workflows/_analyze_and_test_dart_module.yaml
+++ b/.github/workflows/_analyze_and_test_dart_module.yaml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Get dart dependencies
         if: inputs.has_build_runner == 'false'
-        run: flutter pub get
+        run: dart pub get
 
       - name: Setup Melos and run code generators everywhere
         if: inputs.have_dependent_build_runner == 'true'
