--- a/.github/workflows/layer_feature_flag.yaml
+++ b/.github/workflows/layer_feature_flag.yaml
@@ -6,8 +6,12 @@ concurrency:
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/feature_flag/**
+    tags:
+      - '*'
 
 #on:
 #  push
@@ -21,4 +25,6 @@ jobs:
     with:
       module_path: './layers/feature_flag'
       should_run_golden_test: 'false'
+      has_build_runner: 'true'
+      have_dependent_build_runner: 'true'
 
