--- a/.github/workflows/layer_use_case.yaml
+++ b/.github/workflows/layer_use_case.yaml
@@ -6,8 +6,12 @@ concurrency:
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/use_case/**
+    tags:
+      - '*'
 
 #on:
 #  push
@@ -21,3 +25,5 @@ jobs:
     with:
       module_path: './layers/use_case'
       should_run_golden_test: 'false'
+      has_build_runner: 'false'
+      have_dependent_build_runner: 'false'
