--- a/.github/workflows/_build_android.yaml
+++ b/.github/workflows/_build_android.yaml
@@ -14,10 +14,13 @@ on:
         required: true
       upload_to_github:
         type: string
-        required: false
+        required: true
       upload_to_firebase:
         type: string
-        required: false
+        required: true
+      upload_to_play_store:
+        type: string
+        required: true
     secrets:
       SIGNING_KEYSTORE:
         required: true
@@ -30,6 +33,8 @@ on:
       FIREBASE_APP_ID:
         required: true
       CREDENTIAL_FILE_CONTENT:
+        required: true
+      PLAYSTORE_SERVICE_ACCOUNT_JSON:
         required: true
 
 env:
@@ -74,13 +79,24 @@ jobs:
           echo "keyPassword=${{ secrets.SIGNING_KEY_PASSWORD }}" >> ${{env.PROPERTIES_PATH}}
           echo "keyAlias=${{ secrets.SIGNING_KEY_ALIAS }}" >> ${{env.PROPERTIES_PATH}}
 
-      - name: Set version from tag
+      - name: Extract version and build name from tag
         run: |
-          if [ "$GITHUB_REF_TYPE" != "tag" ]
-          then
-            echo "Ref name $GITHUB_REF_NAME is not a tag but a $GITHUB_REF_TYPE, not setting version number"
+          if [ "$GITHUB_REF_TYPE" != "tag" ]; then
+            echo "Ref name $GITHUB_REF_NAME is not a tag but a $GITHUB_REF_TYPE, not setting version and build name"
           else
-            version=$(echo $GITHUB_REF_NAME | sed "s/-review//" | sed "s/-prod//" | sed "s/+.*//") && sed -i "s/^version: .*$/version: $version/g" pubspec.yaml
+            version=$(echo $GITHUB_REF_NAME | sed "s/-review//" | sed "s/-prod//" | sed "s/+.*//")
+            build_name=$(echo $GITHUB_REF_NAME | sed "s/-review//" | sed "s/-prod//")
+            echo "Extracted version: $version"
+            echo "Extracted build name: $build_name"
+            echo "::set-output name=version::$version"
+            echo "::set-output name=build_name::$build_name"
+          fi
+        id: extract_version_and_build_name
+
+      - name: Update pubspec.yaml with extracted version
+        run: |
+          if [ -n "${{ steps.extract_version_and_build_name.outputs.version }}" ]; then
+          sed -i "s/^version: .*$/version: ${{ steps.extract_version_and_build_name.outputs.version }}/g" pubspec.yaml
           fi
 
       - name: Setup Melos
@@ -95,7 +111,7 @@ jobs:
         run: flutter pub run flutter_launcher_icons -f flutter_launcher_icons-${{ inputs.flavor }}.yaml
 
       - name: Build apk file
-        run: flutter build apk --flavor ${{ inputs.flavor }} -t ${{ inputs.target }} --dart-define=build_env=${{ inputs.build_env }}
+        run: flutter build apk --flavor ${{ inputs.flavor }} -t ${{ inputs.target }} --dart-define=build_env=${{ inputs.build_env }} --build-name=${{ steps.extract_version_and_build_name.outputs.build_name }}
         timeout-minutes: 20
 
       - name: Build aab file
@@ -125,4 +141,17 @@ jobs:
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: Testers
           file: build/app/outputs/flutter-apk/app-${{ inputs.flavor }}-release.apk
+
+      - name: Upload AAB to Play Store
+        if: inputs.upload_to_play_store == 'true'
+        uses: r0adkll/upload-google-play@v1.1.2
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.PLAYSTORE_SERVICE_ACCOUNT_JSON }}
+          packageName: com.mayandro.dexquiz.${{ inputs.flavor }}
+          releaseFiles: build/app/outputs/bundle/${{ inputs.flavor }}Release/app-${{ inputs.flavor }}-release.aab
+          track: alpha
+
+
+
+
 
