--- a/.github/workflows/feature_settings.yaml
+++ b/.github/workflows/feature_settings.yaml
@@ -6,8 +6,12 @@ concurrency:
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - features/settings/**
+    tags:
+      - '*'
 
 #on:
 #  push
@@ -21,4 +25,6 @@ jobs:
     with:
       module_path: './features/settings'
       should_run_golden_test: 'false'
+      has_build_runner: 'false'
+      have_dependent_build_runner: 'true'
 
