--- a/.github/workflows/layer_cache.yaml
+++ b/.github/workflows/layer_cache.yaml
@@ -6,8 +6,12 @@ concurrency:
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/cache/**
+    tags:
+      - '*'
 
 #on:
 #  push
@@ -21,4 +25,6 @@ jobs:
     with:
       module_path: './layers/cache'
       should_run_golden_test: 'false'
+      has_build_runner: 'true'
+      have_dependent_build_runner: 'false'
 
