--- a/.github/workflows/layer_dependency_injector.yaml
+++ b/.github/workflows/layer_dependency_injector.yaml
@@ -6,8 +6,12 @@ concurrency:
 
 on:
   push:
+    branches:
+      - staging
     paths:
       - layers/dependency_injector/**
+    tags:
+      - '*'
 
 #on:
 #  push
@@ -20,4 +24,6 @@ jobs:
     uses: ./.github/workflows/_analyze_and_test_dart_module.yaml
     with:
       module_path: './layers/dependency_injector'
+      has_build_runner: 'false'
+      have_dependent_build_runner: 'false'
 
