--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -112,4 +112,5 @@ flutter {
 
 dependencies {
     implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.android.support:multidex:2.0.1'
 }
