--- a/layers/design_system/pubspec.yaml
+++ b/layers/design_system/pubspec.yaml
@@ -34,6 +34,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/badge/
     - assets/lottieFiles/
     - assets/gifs/
   fonts:
