--- a/flutter_launcher_icons-kanto.yaml
+++ b/flutter_launcher_icons-kanto.yaml
@@ -1,5 +1,5 @@
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/launchers/kanto.png"
+  image_path: "assets/launchers/kanto_launcher.png"
   remove_alpha_ios: true
