--- a/flutter_native_splash-kanto.yaml
+++ b/flutter_native_splash-kanto.yaml
@@ -1,7 +1,7 @@
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/launchers/kanto.png
+  image: assets/launchers/kanto_launcher.png
   color_dark: "#121212"
-  image_dark: assets/launchers/kanto.png
+  image_dark: assets/launchers/kanto_launcher.png
 
   web: false
